kubernetes/infrastructure/capacitor/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: capacitor-external-ingress
  namespace: flux-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`capacitor.local.fascinated.cc`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: capacitor
          port: 9000
  tls:
    secretName: fascinated-cc
